[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Office/OfficeTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Player/Yohe.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Maduro/Maduro.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Swing/Swing.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/LifeCounter/LifeCounter.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Office/SkyBack.gd" type="Script" id=6]
[ext_resource path="res://World/Boss/BossLevel.gd" type="Script" id=7]
[ext_resource path="res://UI/Transition/Transition.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music/2021-08-30_-_Boss_Time_-_www.FesliyanStudios.com.mp3" type="AudioStream" id=9]

[node name="BossLevel" type="Node2D"]
script = ExtResource( 7 )

[node name="Level" type="Node2D" parent="."]

[node name="SkyBack" type="Node2D" parent="Level"]
script = ExtResource( 6 )
follow = NodePath("../../Yohe/Camera2D")

[node name="Sky" type="TileMap" parent="Level/SkyBack"]
position = Vector2( -72, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 128
format = 1
tile_data = PoolIntArray( -524294, 3, 0, -524293, 3, 0, -524292, 3, 0, -524291, 3, 0, -524290, 3, 0, -524289, 3, 0, -589824, 3, 0, -589823, 3, 0, -589822, 3, 0, -589821, 3, 0, -589820, 3, 0, -589819, 3, 0, -589818, 3, 0, -589817, 3, 0, -589816, 3, 0, -589815, 3, 0, -589814, 3, 0, -589813, 3, 0, -589812, 3, 0, -589811, 3, 0, -589810, 3, 0, -589809, 3, 0, -589808, 3, 0, -589807, 3, 0, -458758, 3, 0, -458757, 3, 0, -458756, 3, 0, -458755, 3, 0, -458754, 3, 0, -458753, 3, 0, -524288, 3, 0, -524287, 3, 0, -524286, 3, 0, -524285, 3, 0, -524284, 3, 0, -524283, 3, 0, -524282, 3, 0, -524281, 3, 0, -524280, 3, 0, -524279, 3, 0, -524278, 3, 0, -524277, 3, 0, -524276, 3, 0, -524275, 3, 0, -524274, 3, 0, -524273, 3, 0, -524272, 3, 0, -524271, 3, 0, -393222, 3, 0, -393221, 3, 0, -393220, 3, 0, -393219, 3, 0, -393218, 3, 0, -393217, 3, 0, -458752, 3, 0, -458751, 3, 0, -458750, 3, 0, -458749, 3, 0, -458748, 3, 0, -458747, 3, 0, -458746, 3, 0, -458745, 3, 0, -458744, 3, 0, -458743, 3, 0, -458742, 3, 0, -458741, 3, 0, -458740, 3, 0, -458739, 3, 0, -458738, 3, 0, -458737, 3, 0, -458736, 3, 0, -458735, 3, 0, -327686, 3, 0, -327685, 3, 0, -327684, 3, 0, -327683, 3, 0, -327682, 3, 0, -327681, 3, 0, -393216, 3, 0, -393215, 3, 0, -393214, 3, 0, -393213, 3, 0, -393212, 3, 0, -393211, 3, 0, -393210, 3, 0, -393209, 3, 0, -393208, 3, 0, -393207, 3, 0, -393206, 3, 0, -393205, 3, 0, -393204, 3, 0, -393203, 3, 0, -393202, 3, 0, -393201, 3, 0, -393200, 3, 0, -393199, 3, 0, -262150, 3, 0, -262149, 3, 0, -262148, 3, 0, -262147, 3, 0, -262146, 3, 0, -262145, 3, 0, -327680, 3, 0, -327679, 3, 0, -327678, 3, 0, -327677, 3, 0, -327676, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -327665, 3, 0, -327664, 3, 0, -327663, 3, 0, -196614, 3, 0, -196613, 3, 0, -196612, 3, 0, -196611, 3, 0, -196610, 3, 0, -196609, 3, 0, -262144, 3, 0, -262143, 3, 0, -262142, 3, 0, -262141, 3, 0, -262140, 3, 0, -262139, 3, 0, -262138, 3, 0, -262137, 3, 0, -262136, 3, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 3, 0, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -262128, 3, 0, -262127, 3, 0, -131078, 3, 0, -131077, 3, 0, -131076, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 3, 0, -196608, 3, 0, -196607, 3, 0, -196606, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -196602, 3, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 3, 0, -196597, 3, 0, -196596, 3, 0, -196595, 3, 0, -196594, 3, 0, -196593, 3, 0, -196592, 3, 0, -196591, 3, 0, -65542, 3, 0, -65541, 3, 0, -65540, 3, 0, -65539, 3, 0, -65538, 3, 0, -65537, 3, 0, -131072, 3, 0, -131071, 3, 0, -131070, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -131066, 3, 0, -131065, 3, 0, -131064, 3, 0, -131063, 3, 0, -131062, 3, 0, -131061, 3, 0, -131060, 3, 0, -131059, 3, 0, -131058, 3, 0, -131057, 3, 0, -131056, 3, 0, -131055, 3, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 262138, 3, 0, 262139, 3, 0, 262140, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 327674, 3, 0, 327675, 3, 0, 327676, 3, 0, 327677, 3, 0, 327678, 3, 0, 327679, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 393210, 3, 0, 393211, 3, 0, 393212, 3, 0, 393213, 3, 0, 393214, 3, 0, 393215, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 458746, 3, 0, 458747, 3, 0, 458748, 3, 0, 458749, 3, 0, 458750, 3, 0, 458751, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0 )

[node name="SkyObjects" type="TileMap" parent="Level/SkyBack"]
position = Vector2( -56, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 128
format = 1
tile_data = PoolIntArray( -327684, 17, 0, -327683, 3, 0, -327682, 3, 0, -327681, 3, 0, -393216, 3, 0, -393215, 3, 0, -393214, 3, 0, -393213, 3, 0, -393212, 3, 0, -393211, 3, 0, -393210, 3, 0, -393209, 3, 0, -393208, 3, 0, -393207, 3, 0, -393206, 3, 0, -393205, 3, 0, -393204, 3, 0, -393203, 19, 0, -393202, 20, 0, -262147, 3, 0, -262146, 3, 0, -262145, 3, 0, -327680, 3, 0, -327679, 3, 0, -327678, 3, 0, -327677, 17, 0, -327676, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -196611, 3, 0, -196610, 3, 0, -196609, 3, 0, -262144, 3, 0, -262143, 3, 0, -262142, 3, 0, -262141, 3, 0, -262140, 3, 0, -262139, 3, 0, -262138, 3, 0, -262137, 19, 0, -262136, 20, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 18, 0, -262131, 3, 0, -262130, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 19, 0, -196608, 20, 0, -196607, 3, 0, -196606, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -196602, 3, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 3, 0, -196597, 3, 0, -196596, 3, 0, -196595, 3, 0, -196594, 3, 0, -65540, 17, 0, -65539, 3, 0, -65538, 3, 0, -65537, 3, 0, -131072, 3, 0, -131071, 3, 0, -131070, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -131066, 3, 0, -131065, 3, 0, -131064, 3, 0, -131063, 17, 0, -131062, 3, 0, -131061, 3, 0, -131060, 3, 0, -131059, 3, 0, -131058, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 19, 0, -65532, 20, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 17, 0, -65523, 3, 0, -65522, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 17, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 17, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 17, 0, 196614, 3, 0, 196615, 3, 0, 196616, 19, 0, 196617, 20, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 327677, 3, 0, 327678, 3, 0, 327679, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 17, 0, 262158, 3, 0, 393210, 19, 0, 393211, 20, 0, 393213, 3, 0, 393214, 3, 0, 393215, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0 )

[node name="Walls" type="TileMap" parent="Level"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -720898, 1, 0, -720897, 1, 0, -786432, 1, 0, -786431, 1, 0, -786430, 1, 0, -786429, 1, 0, -786428, 1, 0, -786427, 1, 0, -786426, 1, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 1, 0, -786419, 1, 0, -786418, 1, 0, -786417, 1, 0, -786416, 1, 0, -786415, 1, 0, -786414, 1, 0, -786413, 1, 0, -655362, 1, 0, -655361, 1, 0, -720896, 1, 0, -720895, 1, 0, -720894, 1, 0, -720893, 1, 0, -720892, 1, 0, -720891, 1, 0, -720890, 1, 0, -720889, 1, 0, -720888, 1, 0, -720887, 1, 0, -720886, 1, 0, -720885, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 1, 0, -720879, 1, 0, -720878, 1, 0, -720877, 1, 0, -589826, 1, 0, -589825, 22, 1, -655360, 22, 131075, -655359, 22, 131075, -655358, 22, 131075, -655357, 22, 2, -655356, 1, 0, -655355, 22, 1, -655354, 22, 131075, -655353, 22, 131075, -655352, 22, 131075, -655351, 22, 2, -655350, 1, 0, -655349, 22, 1, -655348, 22, 131075, -655347, 22, 131075, -655346, 22, 131075, -655345, 22, 2, -655344, 1, 0, -655343, 22, 1, -655342, 22, 2, -655341, 1, 0, -524290, 1, 0, -524289, 22, 131072, -589824, 22, 3, -589823, 22, 3, -589822, 22, 3, -589821, 22, 131073, -589820, 1, 0, -589819, 22, 131072, -589818, 22, 3, -589817, 22, 3, -589816, 22, 3, -589815, 22, 131073, -589814, 1, 0, -589813, 22, 131072, -589812, 22, 3, -589811, 22, 3, -589810, 22, 3, -589809, 22, 131073, -589808, 1, 0, -589807, 22, 131072, -589806, 22, 131073, -589805, 1, 0, -458754, 1, 0, -458753, 22, 131072, -524288, 22, 3, -524287, 22, 3, -524286, 22, 3, -524285, 22, 131073, -524284, 1, 0, -524283, 22, 131072, -524282, 22, 3, -524281, 22, 3, -524280, 22, 3, -524279, 22, 131073, -524278, 1, 0, -524277, 22, 131072, -524276, 22, 3, -524275, 22, 3, -524274, 22, 3, -524273, 22, 131073, -524272, 1, 0, -524271, 22, 131072, -524270, 22, 131073, -524269, 1, 0, -393218, 1, 0, -393217, 22, 65537, -458752, 22, 131074, -458751, 22, 131074, -458750, 22, 131074, -458749, 22, 65538, -458748, 1, 0, -458747, 22, 65537, -458746, 22, 131074, -458745, 22, 131074, -458744, 22, 131074, -458743, 22, 65538, -458742, 1, 0, -458741, 22, 65537, -458740, 22, 131074, -458739, 22, 131074, -458738, 22, 131074, -458737, 22, 65538, -458736, 1, 0, -458735, 22, 65537, -458734, 22, 65538, -458733, 1, 0, -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -393210, 1, 0, -393209, 1, 0, -393208, 1, 0, -393207, 1, 0, -393206, 1, 0, -393205, 1, 0, -393204, 1, 0, -393203, 1, 0, -393202, 1, 0, -393201, 1, 0, -393200, 1, 0, -393199, 1, 0, -393198, 1, 0, -393197, 1, 0, -262146, 1, 0, -262145, 22, 1, -327680, 22, 131075, -327679, 22, 131075, -327678, 22, 131075, -327677, 22, 2, -327676, 1, 0, -327675, 22, 1, -327674, 22, 131075, -327673, 22, 131075, -327672, 22, 131075, -327671, 22, 2, -327670, 1, 0, -327669, 22, 1, -327668, 22, 131075, -327667, 22, 131075, -327666, 22, 131075, -327665, 22, 2, -327664, 1, 0, -327663, 1, 0, -327662, 1, 0, -327661, 1, 0, -196610, 1, 0, -196609, 22, 131072, -262144, 22, 3, -262143, 22, 3, -262142, 22, 3, -262141, 22, 131073, -262140, 1, 0, -262139, 22, 131072, -262138, 22, 3, -262137, 22, 3, -262136, 22, 3, -262135, 22, 131073, -262134, 1, 0, -262133, 22, 131072, -262132, 22, 3, -262131, 22, 3, -262130, 22, 3, -262129, 22, 131073, -262128, 1, 0, -262127, 1, 0, -262126, 1, 0, -262125, 1, 0, -131074, 1, 0, -131073, 22, 131072, -196608, 22, 3, -196607, 22, 3, -196606, 22, 3, -196605, 22, 131073, -196604, 1, 0, -196603, 22, 131072, -196602, 22, 3, -196601, 22, 3, -196600, 22, 3, -196599, 22, 131073, -196598, 1, 0, -196597, 22, 131072, -196596, 22, 3, -196595, 22, 3, -196594, 22, 3, -196593, 22, 131073, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -65538, 1, 0, -65537, 22, 65537, -131072, 22, 131074, -131071, 22, 131074, -131070, 22, 131074, -131069, 22, 65538, -131068, 1, 0, -131067, 22, 65537, -131066, 22, 131074, -131065, 22, 131074, -131064, 22, 131074, -131063, 22, 65538, -131062, 1, 0, -131061, 22, 65537, -131060, 22, 131074, -131059, 22, 131074, -131058, 22, 131074, -131057, 22, 65538, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, 65534, 1, 0, 65535, 22, 1, 0, 22, 131075, 1, 22, 131075, 2, 22, 131075, 3, 22, 2, 4, 1, 0, 5, 22, 1, 6, 22, 131075, 7, 22, 131075, 8, 22, 131075, 9, 22, 2, 10, 1, 0, 11, 22, 1, 12, 22, 131075, 13, 22, 131075, 14, 22, 131075, 15, 22, 2, 16, 1, 0, 17, 22, 1, 18, 22, 2, 19, 1, 0, 131070, 1, 0, 131071, 22, 131072, 65536, 22, 3, 65537, 22, 3, 65538, 22, 3, 65539, 22, 131073, 65540, 1, 0, 65541, 22, 131072, 65542, 22, 3, 65543, 22, 3, 65544, 22, 3, 65545, 22, 131073, 65546, 1, 0, 65547, 22, 131072, 65548, 22, 3, 65549, 22, 3, 65550, 22, 3, 65551, 22, 131073, 65552, 1, 0, 65553, 22, 131072, 65554, 22, 131073, 65555, 1, 0, 196606, 1, 0, 196607, 22, 131072, 131072, 22, 3, 131073, 22, 3, 131074, 22, 3, 131075, 22, 131073, 131076, 1, 0, 131077, 22, 131072, 131078, 22, 3, 131079, 22, 3, 131080, 22, 3, 131081, 22, 131073, 131082, 1, 0, 131083, 22, 131072, 131084, 22, 3, 131085, 22, 3, 131086, 22, 3, 131087, 22, 131073, 131088, 1, 0, 131089, 22, 131072, 131090, 22, 131073, 131091, 1, 0, 262142, 1, 0, 262143, 22, 65537, 196608, 22, 131074, 196609, 22, 131074, 196610, 22, 131074, 196611, 22, 65538, 196612, 1, 0, 196613, 22, 65537, 196614, 22, 131074, 196615, 22, 131074, 196616, 22, 131074, 196617, 22, 65538, 196618, 1, 0, 196619, 22, 65537, 196620, 22, 131074, 196621, 22, 131074, 196622, 22, 131074, 196623, 22, 65538, 196624, 1, 0, 196625, 22, 65537, 196626, 22, 65538, 196627, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0 )

[node name="Level" type="TileMap" parent="Level"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 128
format = 1
tile_data = PoolIntArray( -786435, 0, 1, -786434, 0, 3, -786433, 0, 3, -851968, 0, 3, -851967, 0, 3, -851966, 0, 3, -851965, 0, 3, -851964, 0, 3, -851963, 0, 3, -851962, 0, 3, -851961, 0, 3, -851960, 0, 3, -851959, 0, 3, -851958, 0, 3, -851957, 0, 3, -851956, 0, 3, -851955, 0, 3, -851954, 0, 3, -851953, 0, 3, -851952, 0, 3, -851951, 0, 3, -851950, 0, 3, -851949, 0, 3, -851948, 0, 2, -720899, 0, 65540, -720898, 2, 0, -720897, 0, 65539, -786432, 0, 65539, -786431, 0, 65539, -786430, 0, 65539, -786429, 0, 65539, -786428, 0, 65539, -786427, 0, 65539, -786426, 0, 65539, -786425, 0, 65539, -786424, 0, 65539, -786423, 0, 65539, -786422, 0, 65539, -786421, 0, 65539, -786420, 0, 65539, -786419, 0, 65539, -786418, 0, 65539, -786417, 0, 65539, -786416, 0, 65539, -786415, 0, 65539, -786414, 0, 65539, -786413, 2, 0, -786412, 0, 4, -655363, 0, 65540, -655362, 0, 4, -720877, 0, 65540, -720876, 0, 4, -589827, 0, 65540, -589826, 0, 4, -655341, 0, 65540, -655340, 0, 4, -524291, 0, 65540, -524290, 0, 4, -589805, 0, 65540, -589804, 0, 4, -458755, 0, 65540, -458754, 0, 4, -524269, 0, 65540, -524268, 0, 4, -393219, 0, 65540, -393218, 0, 4, -458733, 0, 65540, -458732, 0, 4, -327683, 0, 65540, -327682, 0, 4, -393197, 0, 65540, -393196, 0, 4, -262147, 0, 65540, -262146, 0, 4, -327661, 0, 65540, -327660, 0, 4, -196611, 0, 65540, -196610, 0, 4, -262127, 0, 1, -262126, 0, 3, -262125, 2, 0, -262124, 0, 4, -131075, 0, 65540, -131074, 0, 4, -196591, 0, 65537, -196590, 0, 65539, -196589, 2, 0, -196588, 0, 4, -65539, 0, 65540, -65538, 0, 4, -131053, 0, 65540, -131052, 0, 4, -3, 0, 65540, -2, 0, 4, -65517, 0, 65540, -65516, 0, 4, 65533, 0, 65540, 65534, 0, 4, 19, 0, 65540, 20, 0, 4, 131069, 0, 65540, 131070, 0, 4, 65555, 0, 65540, 65556, 0, 4, 196605, 0, 65540, 196606, 0, 4, 131091, 0, 65540, 131092, 0, 4, 262141, 0, 65540, 262142, 0, 4, 196627, 0, 65540, 196628, 0, 4, 327669, 0, 1, 327670, 0, 3, 327671, 0, 3, 327672, 0, 3, 327673, 0, 3, 327674, 0, 3, 327675, 0, 3, 327676, 0, 3, 327677, 2, 0, 327678, 2, 0, 327679, 0, 3, 262144, 0, 3, 262145, 0, 3, 262146, 0, 3, 262147, 0, 3, 262148, 0, 3, 262149, 0, 3, 262150, 0, 3, 262151, 0, 3, 262152, 0, 3, 262153, 0, 3, 262154, 0, 3, 262155, 0, 3, 262156, 0, 3, 262157, 0, 3, 262158, 0, 3, 262159, 0, 3, 262160, 0, 3, 262161, 0, 3, 262162, 0, 3, 262163, 2, 0, 262164, 2, 0, 262165, 0, 3, 262166, 0, 3, 262167, 0, 3, 262168, 0, 3, 262169, 0, 3, 262170, 0, 3, 262171, 0, 3, 262172, 0, 3, 262173, 0, 3, 262174, 0, 3, 262175, 0, 3, 262176, 0, 3, 262177, 0, 2, 393205, 0, 65540, 393206, 2, 0, 393207, 2, 0, 393208, 2, 0, 393209, 2, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 2, 0, 327707, 2, 0, 327708, 2, 0, 327709, 2, 0, 327710, 2, 0, 327711, 2, 0, 327712, 2, 0, 327713, 0, 4, 458741, 0, 65540, 458742, 2, 0, 458743, 2, 0, 458744, 2, 0, 458745, 2, 0, 458746, 2, 0, 458747, 2, 0, 458748, 2, 0, 458749, 2, 0, 458750, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 2, 0, 393247, 2, 0, 393248, 2, 0, 393249, 0, 4, 524277, 0, 65537, 524278, 0, 65539, 524279, 0, 65539, 524280, 0, 65539, 524281, 0, 65539, 524282, 0, 65539, 524283, 0, 65539, 524284, 0, 65539, 524285, 0, 65539, 524286, 0, 65539, 524287, 0, 65539, 458752, 0, 65539, 458753, 0, 65539, 458754, 0, 65539, 458755, 0, 65539, 458756, 0, 65539, 458757, 0, 65539, 458758, 0, 65539, 458759, 0, 65539, 458760, 0, 65539, 458761, 0, 65539, 458762, 0, 65539, 458763, 0, 65539, 458764, 0, 65539, 458765, 0, 65539, 458766, 0, 65539, 458767, 0, 65539, 458768, 0, 65539, 458769, 0, 65539, 458770, 0, 65539, 458771, 0, 65539, 458772, 0, 65539, 458773, 0, 65539, 458774, 0, 65539, 458775, 0, 65539, 458776, 0, 65539, 458777, 0, 65539, 458778, 0, 65539, 458779, 0, 65539, 458780, 0, 65539, 458781, 0, 65539, 458782, 0, 65539, 458783, 0, 65539, 458784, 0, 65539, 458785, 0, 65538 )

[node name="Maduro" parent="." instance=ExtResource( 3 )]
position = Vector2( 280, -64 )

[node name="Obstacles" type="Node2D" parent="."]
position = Vector2( 8, -16 )

[node name="Swing" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 48, -16 )

[node name="Swing3" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 192, -80 )

[node name="Swing2" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 48, -80 )
start = "right"

[node name="Swing4" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 192, -16 )
start = "right"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LifeCounter" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Yohe" parent="." instance=ExtResource( 2 )]
position = Vector2( 56, 48 )
speed = 100
jump_height = 40.0
can_climb = false

[node name="Camera2D" type="Camera2D" parent="Yohe"]
offset = Vector2( 0, -23 )
current = true
zoom = Vector2( 0.25, 0.25 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.5
drag_margin_right = 0.0

[node name="Transition" parent="Yohe/Camera2D" instance=ExtResource( 8 )]
visible = false
margin_left = -520.0
margin_top = -335.0
margin_right = 504.0
margin_bottom = 265.0
mouse_filter = 2
start_closed = true

[node name="EndingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = true

[connection signal="defeated" from="Maduro" to="." method="_on_Maduro_defeated"]
[connection signal="defeated" from="Yohe" to="." method="_on_Yohe_defeated"]
[connection signal="timeout" from="EndingTimer" to="." method="_on_EndingTimer_timeout"]
